# loax

./: Android.mk  CMakeLists.txt  Makefile  Makefile.server  gl2.h  loax_client.c  loax_client.h  loax_client_gl2.c  loax_client_gl2.h  loax_cmd.h  loax_event.c  loax_event.h  loax_gl2.h  loax_listener.c  loax_listener.h  loax_log.c  loax_log.h  loax_serialize.c  loax_serialize.h  loax_server.c  loax_server.h  loax_server_cmd.c  loax_server_cmd.h  loax_server_gl2.c  loax_server_gl2.h
example/: Makefile  client.c  setup.sh
